--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -106,3 +106,20 @@ bottom: 0;
 .card-text{
   text-align: center;
 }
+.linktienda{
+  text-decoration: none;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  color: black;
+}
+.maincontacto{
+  height: 78vh;
+}
+.mainosotros{
+  height: 78vh;
+}
+.index{
+  width: 100%;
+}
+.card{
+  width: 80%;
+}
