--- a/css/estilo.css
+++ b/css/estilo.css
@@ -94,7 +94,7 @@
 }
 
 .card-img-top {
-  height: 20vw;
+  width: 100%;
 }
 
 .precio {
@@ -106,7 +106,7 @@
 footer {
   background-color: grey;
   position: relative;
-  bottom: 0;
+  top: 0;
 }
 
 .footerpag {
@@ -142,7 +142,22 @@ footer {
 }
 
 .card {
+  padding-right: 0;
+}
+
+.h1ndex {
   width: 80%;
+}
+
+.form-control {
+  margin-left: 20%;
+  width: 60%;
+  margin-top: 4%;
+}
+
+.fontacto {
+  font-weight: bold;
+  font-size: 2vw;
 }
 
 /*# sourceMappingURL=estilo.css.map */
