--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -10,6 +10,7 @@
     color: black;
     
 }
+
 .titulo{
   animation-name: Texto;
   animation-duration: 2s;
@@ -18,8 +19,8 @@
   color: black;
   font-family: $Titulofuente;
   font-size: larger;
-  
 }
+
 @keyframes Texto {
     0% {
       opacity: 0%;
@@ -31,6 +32,7 @@
 .bodyheader{
     background-color: aliceblue;
     text-align: center;
+    
 }
 .container{
     display: flex;
@@ -83,7 +85,7 @@
   text-align: center;
 }
 .card-img-top{
-  height: 20vw;
+  width: 100%;
 }
 .precio{
   text-align: center;
@@ -93,7 +95,7 @@
 footer{
 background-color: grey;
 position: relative;
-bottom: 0;
+top: 0;
 }
 .footerpag{
   text-align: center;
@@ -121,5 +123,17 @@ bottom: 0;
   width: 100%;
 }
 .card{
+  padding-right: 0;
+}
+.h1ndex{
   width: 80%;
+}
+.form-control{
+ margin-left: 20%;
+ width: 60%;
+ margin-top: 4%;
+}
+.fontacto{
+  font-weight: bold;
+  font-size: 2vw;
 }
